--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -50,6 +50,48 @@
   opacity: 0.6;
 }
 
+.lightbox{
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color:rgba(0, 0, 0, 0.75);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 2000;
+}
+.lightbox-content{
+  position: relative;
+  max-width: 600px;
+  width: 90%;
+  
+}
+.lightbox-image{
+  width: 100%;
+  border-radius: 1rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.close-btn{
+  position: absolute;
+  top: -1.5rem;
+  right: -0.5rem;
+  background: none;
+  border: none;
+  cursor: pointer;
+  width: 2rem;
+}
+.close-btn img{
+ width: 100%;
+ height: 100%;
+ object-fit: contain;
+}
+
+
+
 
 
 
