--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -146,15 +146,26 @@
   background: none;
   border: none;
   cursor: pointer;
-  width: 2rem;
+  width: 2rem;   /* aumenta área clicável */
+  height: 2rem;
 }
-.close-btn img{
+.close-btn .icon-close{
  width: 100%;
  height: 100%;
  object-fit: contain;
+  display: block;
+  justify-content: center;
+  align-items: center;
 }
 
-
+.close-btn .icon-close path
+{
+  fill: hsl(0, 0%, 100%);
+  transition: fill 0.2s ease; /* transição suave */
+}
+.close-btn:hover .icon-close path {
+  fill: hsl(26,100%,55%);
+}
 
 
 
@@ -288,4 +299,6 @@
   fill: hsl(220, 13%, 13%);
   
 }
+
+
 
