--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -129,12 +129,51 @@
   border-radius: 0.5rem;
   border: 2px solid transparent;
   cursor: pointer;
+
+  position: relative;
+  overflow: hidden;
+
+  display: block;
 } 
+.lightbox-thumbnails .thumbnail img{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  display: block;
+  border-radius:0.5rem ;
+}
 .lightbox-thumbnails .thumbnail.active{
   border-color: hsl(26,100%,55%);
-  opacity: 0.6;
+  opacity: 1;
   
 }
+.lightbox-thumbnails .thumbnail:hover{
+  opacity: 1;
+}
+.lightbox-thumbnails .thumbnail.active::after{
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(255, 255, 255, 0.75); /* camada semi-transparente */
+  z-index: 1;
+  pointer-events: none; /* permite clicar na imagem mesmo com a camada */
+}
+.lightbox-thumbnails .thumbnail:hover:not(.active)::after {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(255, 255, 255, 0.5); 
+  z-index: 1;
+  pointer-events: none;
+}
+
+
 
 
 
